// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Email renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR fFLKkM"
      disabled={true}
    >
      <label
        className="sc-dAKPfc dlKDdg"
      >
        medium
      </label>
      <input
        className="sc-gdfmja dlnBVE"
        disabled={true}
        placeholder=" "
        type="email"
        value="jake.weary@sportsbet.io"
      />
      <p
        className="sc-jVCNtP eydFFY"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR fFLKkM"
      disabled={true}
    >
      <label
        className="sc-dAKPfc dlKDdg"
      >
        large
      </label>
      <input
        className="sc-gdfmja kAEOL"
        disabled={true}
        placeholder=" "
        type="email"
        value="jake.weary@sportsbet.io"
      />
      <p
        className="sc-jVCNtP eydFFY"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR fFLKkM"
      disabled={true}
    >
      <div
        className="sc-fkFYRF guTWqk"
      >
        <input
          className="sc-gdfmja iBwDpR"
          disabled={true}
          placeholder=" "
          type="email"
          value="jake.weary@sportsbet.io"
        />
        <label
          className="sc-bsixGQ ioewyE"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-jVCNtP eydFFY"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Email renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <label
        className="sc-dAKPfc dlKDdg"
      >
        medium
      </label>
      <input
        className="sc-gdfmja hZdYhu"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
      <p
        className="sc-jVCNtP kejpnc"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <label
        className="sc-dAKPfc dlKDdg"
      >
        large
      </label>
      <input
        className="sc-gdfmja hQdAiF"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
      <p
        className="sc-jVCNtP kejpnc"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <div
        className="sc-fkFYRF guTWqk"
      >
        <input
          className="sc-gdfmja keyXuD"
          placeholder="e.g. jake.weary@sportsbet.io"
          type="email"
        />
        <label
          className="sc-bsixGQ ioewyE"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-jVCNtP kejpnc"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Email renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <label
        className="sc-dAKPfc dlKDdg"
      >
        medium
      </label>
      <input
        className="sc-gdfmja dlnBVE"
        placeholder=" "
        readOnly={true}
        type="email"
        value="jake.weary@sportsbet.io"
      />
      <p
        className="sc-jVCNtP eydFFY"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <label
        className="sc-dAKPfc dlKDdg"
      >
        large
      </label>
      <input
        className="sc-gdfmja kAEOL"
        placeholder=" "
        readOnly={true}
        type="email"
        value="jake.weary@sportsbet.io"
      />
      <p
        className="sc-jVCNtP eydFFY"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <div
        className="sc-fkFYRF guTWqk"
      >
        <input
          className="sc-gdfmja iBwDpR"
          placeholder=" "
          readOnly={true}
          type="email"
          value="jake.weary@sportsbet.io"
        />
        <label
          className="sc-bsixGQ ioewyE"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-jVCNtP eydFFY"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Email renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <label
        className="sc-dAKPfc dlKDdg"
      >
        medium
      </label>
      <input
        className="sc-gdfmja dlnBVE"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
      <p
        className="sc-jVCNtP eydFFY"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <label
        className="sc-dAKPfc dlKDdg"
      >
        large
      </label>
      <input
        className="sc-gdfmja kAEOL"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
      <p
        className="sc-jVCNtP eydFFY"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <div
        className="sc-fkFYRF guTWqk"
      >
        <input
          className="sc-gdfmja iBwDpR"
          placeholder="e.g. jake.weary@sportsbet.io"
          type="email"
        />
        <label
          className="sc-bsixGQ ioewyE"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-jVCNtP eydFFY"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Email renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <label
        className="sc-dAKPfc dlKDdg"
      >
        medium
      </label>
      <input
        className="sc-gdfmja dlnBVE"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <label
        className="sc-dAKPfc dlKDdg"
      >
        large
      </label>
      <input
        className="sc-gdfmja kAEOL"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <div
        className="sc-fkFYRF guTWqk"
      >
        <input
          className="sc-gdfmja iBwDpR"
          placeholder="e.g. jake.weary@sportsbet.io"
          type="email"
        />
        <label
          className="sc-bsixGQ ioewyE"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Email renders with label RTL 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <label
        className="sc-dAKPfc dlKDdg"
        dir="rtl"
      >
        medium
      </label>
      <input
        className="sc-gdfmja dlnBVE"
        dir="rtl"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <label
        className="sc-dAKPfc dlKDdg"
        dir="rtl"
      >
        large
      </label>
      <input
        className="sc-gdfmja kAEOL"
        dir="rtl"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <div
        className="sc-fkFYRF guTWqk"
      >
        <input
          className="sc-gdfmja iBwDpR"
          dir="rtl"
          placeholder="e.g. jake.weary@sportsbet.io"
          type="email"
        />
        <label
          className="sc-bsixGQ duuJYT"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Email renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <input
        className="sc-gdfmja dlnBVE"
        placeholder="medium"
        type="email"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <input
        className="sc-gdfmja kAEOL"
        placeholder="large"
        type="email"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <div
        className="sc-fkFYRF guTWqk"
      >
        <input
          className="sc-gdfmja fbVpNI"
          placeholder="xlarge"
          type="email"
        />
        <label
          className="sc-bsixGQ ioewyE"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Email supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <label
        className="sc-dAKPfc dlKDdg"
      >
        medium
      </label>
      <input
        className="sc-gdfmja dMgTdD"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
      <p
        className="sc-jVCNtP eydFFY"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <label
        className="sc-dAKPfc dlKDdg"
      >
        large
      </label>
      <input
        className="sc-gdfmja hxodLc"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
      <p
        className="sc-jVCNtP eydFFY"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <div
        className="sc-fkFYRF hgXxgX"
      >
        <input
          className="sc-gdfmja iBwDpR"
          placeholder="e.g. jake.weary@sportsbet.io"
          type="email"
        />
        <label
          className="sc-bsixGQ ioewyE"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-jVCNtP eydFFY"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
